fix reports
