# src/functions/api-docs/swagger.yaml
@@ -30,6 +30,10 @@ paths:
       summary: get Countries
       description: Get countries
       operationId: getCountries
+      parameters:
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/sort"
+        - $ref: "#/components/parameters/sort_dir"
       responses:
         "200":
           $ref: "#/components/responses/CountryRespose"
@@ -75,29 +79,37 @@ components:
           type: number
           example: 200
     CountryRespose:
-      type: array
-      items:
-        type: object
-        properties:
-          area:
-            type: string
-            example: 447400
-          capital:
-            type: string
-            example: Tashkent
-          continents:
-            type: string
-            example: Asia
-          currencies:
-            type: string
-            example: "Uzbekistani soʻm"
-          languages:
-            type: string
-            example: Russian
-          name:
-            type: string
-            example: Uzbekistan
-
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              area:
+                type: string
+                example: 447400
+              capital:
+                type: string
+                example: Tashkent
+              continents:
+                type: string
+                example: Asia
+              currencies:
+                type: string
+                example: "Uzbekistani soʻm"
+              languages:
+                type: string
+                example: Russian
+              name:
+                type: string
+                example: Uzbekistan
+        page:
+          type: number
+          example: 1
+        page_size:
+          type: number
+          example: 10
     Error:
       type: object
       properties:
@@ -123,19 +135,13 @@ components:
       scheme: bearer
       bearerFormat: JWT
   parameters:
-    id:
-      name: id
-      in: path
-      required: true
-      schema:
-        type: string
     page:
       name: page
       in: query
       description: Page number
       schema:
         type: number
-        default: 1
+        default: 0
     page_size:
       name: page_size
       in: query
@@ -151,6 +157,13 @@ components:
       description: Attribute to sort by
       schema:
         type: string
+        enum:
+          - area
+          - capital
+          - continents
+          - currencies
+          - languages
+          - name
     sort_dir:
       name: sort_dir
       in: query
