# src/models/filters.ts
@@ -1,0 +1,5 @@
+export type Filters = {
+  sort: string;
+  sort_dir: "ASC" | "DESC";
+  page: number;
+};
